[ci skip] Some renaming 238f4eef62687ec2d8b7cc87aa015487805dd966

--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cc7a90f8",
+   "id": "a9df1c7e",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "696d7a08",
+   "id": "f7f80c09",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7ea363f",
+   "id": "e899d1a8",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3df23d3e",
+   "id": "05542a4f",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60030206",
+   "id": "0a88ba6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea655639",
+   "id": "a915b2f2",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4910186e",
+   "id": "bffad14e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ff91702",
+   "id": "237f2c78",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65e920c1",
+   "id": "18c8d926",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa6bec56",
+   "id": "c7b29088",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d4c9a63",
+   "id": "fe416fd1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4bc43bf",
+   "id": "70cab88c",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85bcf394",
+   "id": "65500820",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41464fe0",
+   "id": "a6b27828",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a255213",
+   "id": "d593f508",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98204f2d",
+   "id": "ca98e069",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3068e60a",
+   "id": "f13f5e47",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e42f4361",
+   "id": "c7d4ad0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "faa098e7",
+   "id": "cd6d1f12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b818338c",
+   "id": "807808b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53e434b5",
+   "id": "461cb378",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8b6bde3",
+   "id": "1a3941ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e81787f3",
+   "id": "3f920906",
    "metadata": {},
    "source": [
     "\n",
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e581fa16",
+   "id": "35ffbd12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7809f12",
+   "id": "f5a96c3d",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6eeaf7e",
+   "id": "7614d36a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6877c415",
+   "id": "b4911b9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c69ef99c",
+   "id": "86a2bb28",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42e0d4f8",
+   "id": "1f93d67d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a367305d",
+   "id": "ed991a59",
    "metadata": {},
    "source": [
     "\n",
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb072236",
+   "id": "b14823c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42c03854",
+   "id": "8bd1d66e",
    "metadata": {},
    "source": [
     "\n",
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08c0e04a",
+   "id": "a9020a39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a289ac0",
+   "id": "8374b638",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c6ba6c7",
+   "id": "0bb30b9d",
    "metadata": {},
    "source": [
     "\n",
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a834c23",
+   "id": "63cdc2aa",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b96be820",
+   "id": "98756be5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1be7fe40",
+   "id": "09a633e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb46767a",
+   "id": "9676d0fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2834e9ac",
+   "id": "b43ac6fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da73dc52",
+   "id": "5ea9bba3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c9a87f1",
+   "id": "bed7a8e3",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "127c285d",
+   "id": "48b4c11a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef19ff59",
+   "id": "60711754",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f5742ee",
+   "id": "b011f2bb",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -912,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2670dfeb",
+   "id": "01a330a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -922,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bef4c44",
+   "id": "e8b832a7",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -934,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64fff35e",
+   "id": "6068a1c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -955,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b1d8e4c",
+   "id": "2de4a640",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -971,7 +971,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "553b080c",
+   "id": "8d4ae16a",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -987,38 +987,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8683b871",
+   "id": "cca39b28",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.multioutput import MultiOutputRegressor\n",
     "\n",
     "model = MultiOutputRegressor(\n",
-    "    estimator=HistGradientBoostingRegressor(\n",
-    "        random_state=0,\n",
-    "        learning_rate=skrub.choose_float(\n",
-    "            0.01, 0.9, default=0.1, log=True, name=\"learning_rate\"\n",
-    "        ),\n",
-    "    ),\n",
+    "    estimator=HistGradientBoostingRegressor(random_state=0), n_jobs=-1\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0a33bd9",
+   "id": "45d855c5",
    "metadata": {},
    "outputs": [],
    "source": [
     "predictions = features.skb.apply(\n",
     "    model, y=targets.skb.drop(cols=[\"prediction_time\", \"load_mw\"]).skb.mark_as_y()\n",
-    ").skb.set_name(\"model\")"
+    ").skb.set_name(\"multioutput_gbdt\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8ec2264",
+   "id": "d4234fe6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,7 +1049,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3851bb4e",
+   "id": "147c135a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1064,28 +1059,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aedf1f24",
+   "id": "27f969e8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "learner = predictions.skb.get_pipeline(fitted=True)"
+    "fitted_pipeline = predictions.skb.get_pipeline(fitted=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79d45834",
+   "id": "88f2a14b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sklearn_learner = learner.find_fitted_estimator(\"model\")\n",
+    "sklearn_learner = fitted_pipeline.find_fitted_estimator(\"multioutput_gbdt\")\n",
+    "sklearn_learner"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "031342c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "sklearn_learner.estimators_"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0549276f",
+   "id": "064f65fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1093,7 +1098,7 @@
     "predicted_target_column_names = [\n",
     "    f\"predicted_{target_column_name}\" for target_column_name in target_column_names\n",
     "]\n",
-    "predictions = predictions.rename(\n",
+    "named_predictions = predictions.rename(\n",
     "    {k: v for k, v in zip(target_column_names, predicted_target_column_names)}\n",
     ")"
    ]
@@ -1101,30 +1106,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0dcc08fe",
+   "id": "95ff0637",
    "metadata": {},
    "outputs": [],
    "source": [
     "import datetime\n",
     "\n",
     "\n",
-    "def plot_horizon_forecast(targets, predictions, plot_at_time, historical_timedelta):\n",
+    "def plot_horizon_forecast(\n",
+    "    targets, named_predictions, plot_at_time, historical_timedelta\n",
+    "):\n",
     "    \"\"\"Plot the true target and the forecasted values.\"\"\"\n",
     "    merged_data = targets.skb.select(cols=[\"prediction_time\", \"load_mw\"]).skb.concat(\n",
-    "        [predictions], axis=1\n",
+    "        [named_predictions], axis=1\n",
     "    )\n",
     "    start_time = plot_at_time - historical_timedelta\n",
-    "    end_time = plot_at_time + datetime.timedelta(hours=predictions.skb.eval().shape[1])\n",
-    "\n",
-    "    true_values_past = merged_data.filter(\n",
-    "        pl.col(\"prediction_time\").is_between(start_time, plot_at_time, closed=\"both\")\n",
-    "    ).skb.select(cols=[\"prediction_time\", \"load_mw\"]).rename(\n",
-    "        {\"load_mw\": \"Past true load\"}\n",
+    "    end_time = plot_at_time + datetime.timedelta(\n",
+    "        hours=named_predictions.skb.eval().shape[1]\n",
     "    )\n",
-    "    true_values_future = merged_data.filter(\n",
-    "        pl.col(\"prediction_time\").is_between(plot_at_time, end_time, closed=\"both\")\n",
-    "    ).skb.select(cols=[\"prediction_time\", \"load_mw\"]).rename(\n",
-    "        {\"load_mw\": \"Future true load\"}\n",
+    "\n",
+    "    true_values_past = (\n",
+    "        merged_data.filter(\n",
+    "            pl.col(\"prediction_time\").is_between(\n",
+    "                start_time, plot_at_time, closed=\"both\"\n",
+    "            )\n",
+    "        )\n",
+    "        .skb.select(cols=[\"prediction_time\", \"load_mw\"])\n",
+    "        .rename({\"load_mw\": \"Past true load\"})\n",
+    "    )\n",
+    "    true_values_future = (\n",
+    "        merged_data.filter(\n",
+    "            pl.col(\"prediction_time\").is_between(plot_at_time, end_time, closed=\"both\")\n",
+    "        )\n",
+    "        .skb.select(cols=[\"prediction_time\", \"load_mw\"])\n",
+    "        .rename({\"load_mw\": \"Future true load\"})\n",
     "    )\n",
     "\n",
     "    predicted_record = (\n",
@@ -1171,30 +1186,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eaa81c1d",
+   "id": "58326b4e",
    "metadata": {},
    "outputs": [],
    "source": [
     "plot_at_time = datetime.datetime(2025, 5, 25, 0, 0, tzinfo=datetime.timezone.utc)\n",
     "historical_timedelta = datetime.timedelta(hours=24 * 5)\n",
-    "plot_horizon_forecast(targets, predictions, plot_at_time, historical_timedelta)"
+    "plot_horizon_forecast(targets, named_predictions, plot_at_time, historical_timedelta)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6122afde",
+   "id": "5dd3e004",
    "metadata": {},
    "outputs": [],
    "source": [
     "plot_at_time = datetime.datetime(2025, 5, 24, 0, 0, tzinfo=datetime.timezone.utc)\n",
-    "plot_horizon_forecast(targets, predictions, plot_at_time, historical_timedelta)"
+    "plot_horizon_forecast(targets, named_predictions, plot_at_time, historical_timedelta)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd08ee29",
+   "id": "304ce712",
    "metadata": {},
    "outputs": [],
    "source": []
