--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "44b71f2c",
+   "id": "86201c84",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c719f0c",
+   "id": "b508576c",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a251c0ce",
+   "id": "2dec318f",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b63f30cf",
+   "id": "305d8be6",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f336b8a",
+   "id": "e17605d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b539b75",
+   "id": "9d67fa6a",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab838310",
+   "id": "31793669",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6d1418d",
+   "id": "86bbd88c",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f66d083",
+   "id": "28f18b2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb0135e0",
+   "id": "443280e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0c1620f",
+   "id": "4838dae3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cb2e1a9",
+   "id": "6cb6ef1d",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42449d61",
+   "id": "51d8d383",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "047ca145",
+   "id": "3f863590",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b70992cb",
+   "id": "bbd1290a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "240cb97b",
+   "id": "4b9831d7",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64af5d56",
+   "id": "2a022a97",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1424b459",
+   "id": "b1d2d480",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "439698b6",
+   "id": "8a158631",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b955756",
+   "id": "e08b4b63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d456243a",
+   "id": "1b8e94b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a08ce5e2",
+   "id": "3a74d95d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79258fb1",
+   "id": "615e3f14",
    "metadata": {},
    "source": [
     "\n",
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b10138b2",
+   "id": "707b9d0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a839710",
+   "id": "48404c25",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cede2b4",
+   "id": "43abff8f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77e2cf4b",
+   "id": "8abdf7e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c0bcb06",
+   "id": "13868212",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f96fd751",
+   "id": "3feb5a82",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15dfe192",
+   "id": "298651d1",
    "metadata": {},
    "source": [
     "\n",
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a82d2c04",
+   "id": "79cc12ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "128f7873",
+   "id": "ce4e37cc",
    "metadata": {},
    "source": [
     "\n",
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "698de658",
+   "id": "943f3280",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18ca4270",
+   "id": "8bf5f2b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e236af84",
+   "id": "a80a3509",
    "metadata": {},
    "source": [
     "\n",
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51f5d8b6",
+   "id": "77915092",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98969fb7",
+   "id": "7462a643",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d05959e8",
+   "id": "a72b9716",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75067dd1",
+   "id": "5737afd9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65ddac7b",
+   "id": "ba8b190a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbe1be09",
+   "id": "78914a95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b722fa46",
+   "id": "735ccf0a",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fcdcf46",
+   "id": "01e59184",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82005499",
+   "id": "d6dec41f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "300ea910",
+   "id": "e363fa45",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -912,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be4acb64",
+   "id": "4e09394f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -922,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4824df59",
+   "id": "de156091",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -934,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9347ea1",
+   "id": "24076e45",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -955,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19b59dd0",
+   "id": "3b8a4e20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -971,7 +971,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fb7f573",
+   "id": "9c16ffde",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -987,38 +987,33 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93c4bc7b",
+   "id": "6919459b",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.multioutput import MultiOutputRegressor\n",
     "\n",
     "model = MultiOutputRegressor(\n",
-    "    estimator=HistGradientBoostingRegressor(\n",
-    "        random_state=0,\n",
-    "        learning_rate=skrub.choose_float(\n",
-    "            0.01, 0.9, default=0.1, log=True, name=\"learning_rate\"\n",
-    "        ),\n",
-    "    ),\n",
+    "    estimator=HistGradientBoostingRegressor(random_state=0), n_jobs=-1\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbee3ff9",
+   "id": "064729de",
    "metadata": {},
    "outputs": [],
    "source": [
     "predictions = features.skb.apply(\n",
     "    model, y=targets.skb.drop(cols=[\"prediction_time\", \"load_mw\"]).skb.mark_as_y()\n",
-    ").skb.set_name(\"model\")"
+    ").skb.set_name(\"multioutput_gbdt\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fc488b86",
+   "id": "e7ab7ddf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,7 +1049,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7205c5d0",
+   "id": "c4d58122",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1064,28 +1059,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e40ee53",
+   "id": "202b14b0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "learner = predictions.skb.get_pipeline(fitted=True)"
+    "fitted_pipeline = predictions.skb.get_pipeline(fitted=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c9b31ed",
+   "id": "d3a5921b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sklearn_learner = learner.find_fitted_estimator(\"model\")\n",
+    "sklearn_learner = fitted_pipeline.find_fitted_estimator(\"multioutput_gbdt\")\n",
+    "sklearn_learner"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "616d5d41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "sklearn_learner.estimators_"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebb71caa",
+   "id": "a79c5596",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1093,7 +1098,7 @@
     "predicted_target_column_names = [\n",
     "    f\"predicted_{target_column_name}\" for target_column_name in target_column_names\n",
     "]\n",
-    "predictions = predictions.rename(\n",
+    "named_predictions = predictions.rename(\n",
     "    {k: v for k, v in zip(target_column_names, predicted_target_column_names)}\n",
     ")"
    ]
@@ -1101,30 +1106,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d909a20",
+   "id": "a0aaa013",
    "metadata": {},
    "outputs": [],
    "source": [
     "import datetime\n",
     "\n",
     "\n",
-    "def plot_horizon_forecast(targets, predictions, plot_at_time, historical_timedelta):\n",
+    "def plot_horizon_forecast(\n",
+    "    targets, named_predictions, plot_at_time, historical_timedelta\n",
+    "):\n",
     "    \"\"\"Plot the true target and the forecasted values.\"\"\"\n",
     "    merged_data = targets.skb.select(cols=[\"prediction_time\", \"load_mw\"]).skb.concat(\n",
-    "        [predictions], axis=1\n",
+    "        [named_predictions], axis=1\n",
     "    )\n",
     "    start_time = plot_at_time - historical_timedelta\n",
-    "    end_time = plot_at_time + datetime.timedelta(hours=predictions.skb.eval().shape[1])\n",
-    "\n",
-    "    true_values_past = merged_data.filter(\n",
-    "        pl.col(\"prediction_time\").is_between(start_time, plot_at_time, closed=\"both\")\n",
-    "    ).skb.select(cols=[\"prediction_time\", \"load_mw\"]).rename(\n",
-    "        {\"load_mw\": \"Past true load\"}\n",
+    "    end_time = plot_at_time + datetime.timedelta(\n",
+    "        hours=named_predictions.skb.eval().shape[1]\n",
     "    )\n",
-    "    true_values_future = merged_data.filter(\n",
-    "        pl.col(\"prediction_time\").is_between(plot_at_time, end_time, closed=\"both\")\n",
-    "    ).skb.select(cols=[\"prediction_time\", \"load_mw\"]).rename(\n",
-    "        {\"load_mw\": \"Future true load\"}\n",
+    "\n",
+    "    true_values_past = (\n",
+    "        merged_data.filter(\n",
+    "            pl.col(\"prediction_time\").is_between(\n",
+    "                start_time, plot_at_time, closed=\"both\"\n",
+    "            )\n",
+    "        )\n",
+    "        .skb.select(cols=[\"prediction_time\", \"load_mw\"])\n",
+    "        .rename({\"load_mw\": \"Past true load\"})\n",
+    "    )\n",
+    "    true_values_future = (\n",
+    "        merged_data.filter(\n",
+    "            pl.col(\"prediction_time\").is_between(plot_at_time, end_time, closed=\"both\")\n",
+    "        )\n",
+    "        .skb.select(cols=[\"prediction_time\", \"load_mw\"])\n",
+    "        .rename({\"load_mw\": \"Future true load\"})\n",
     "    )\n",
     "\n",
     "    predicted_record = (\n",
@@ -1171,30 +1186,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d8ade51",
+   "id": "5ebd3b07",
    "metadata": {},
    "outputs": [],
    "source": [
     "plot_at_time = datetime.datetime(2025, 5, 25, 0, 0, tzinfo=datetime.timezone.utc)\n",
     "historical_timedelta = datetime.timedelta(hours=24 * 5)\n",
-    "plot_horizon_forecast(targets, predictions, plot_at_time, historical_timedelta)"
+    "plot_horizon_forecast(targets, named_predictions, plot_at_time, historical_timedelta)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e529235c",
+   "id": "2cb85054",
    "metadata": {},
    "outputs": [],
    "source": [
     "plot_at_time = datetime.datetime(2025, 5, 24, 0, 0, tzinfo=datetime.timezone.utc)\n",
-    "plot_horizon_forecast(targets, predictions, plot_at_time, historical_timedelta)"
+    "plot_horizon_forecast(targets, named_predictions, plot_at_time, historical_timedelta)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5261b2c0",
+   "id": "b86f6bc9",
    "metadata": {},
    "outputs": [],
    "source": []
