[ci skip] write a function to collect the predictions from a cross-validation 69298da040c75c5345d6b142be384f3c7593930b

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6a2ef0e9",
+   "id": "5ff44334",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0358958",
+   "id": "1b39b72f",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f528b183",
+   "id": "5929a76f",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0813324c",
+   "id": "92fe1756",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0479af23",
+   "id": "06bb4354",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7593c860",
+   "id": "1517d422",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5c30b3b",
+   "id": "450e498b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3876207d",
+   "id": "2296cc18",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c68f709",
+   "id": "d679a320",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ede738fe",
+   "id": "7344056a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fd58a32",
+   "id": "a3969d2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b6d20df",
+   "id": "de5c90cc",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ca3128b",
+   "id": "b21d9996",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0711ab32",
+   "id": "46b3d79b",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e10a522",
+   "id": "d0d251af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c453791",
+   "id": "1fe5cb71",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d49c84b7",
+   "id": "f9d01209",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7deaab6c",
+   "id": "4ade6897",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "61de60ae",
+   "id": "5141531f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17f9a7a8",
+   "id": "6408b828",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30fddba8",
+   "id": "29d0dd27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89e7fe67",
+   "id": "e62b5797",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f4ce06b",
+   "id": "38129339",
    "metadata": {},
    "source": [
     "\n",
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e9b766f",
+   "id": "8bcd1256",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed699cba",
+   "id": "16650bf4",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c4f8105",
+   "id": "a71cb0af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99acb2cc",
+   "id": "4729cc12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ee631c1",
+   "id": "b2aaa235",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec32f9cd",
+   "id": "216ef99b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00fd486b",
+   "id": "bd36a8f0",
    "metadata": {},
    "source": [
     "\n",
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bdffbbe",
+   "id": "dab83fd6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfe69d72",
+   "id": "8f12a070",
    "metadata": {},
    "source": [
     "\n",
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb74af57",
+   "id": "78d73904",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "870bddc0",
+   "id": "e9182cb8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d47f66b",
+   "id": "f9f6fa79",
    "metadata": {},
    "source": [
     "\n",
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ef1bd2a",
+   "id": "5fbebdf3",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6ef581f",
+   "id": "1aaa48e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6008be98",
+   "id": "839520e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3d9b432",
+   "id": "da582515",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e41bfb4",
+   "id": "429f946c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3de15d79",
+   "id": "655f3f41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db766d35",
+   "id": "d49d54d2",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "096bd848",
+   "id": "49b38b25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e7739af",
+   "id": "c5a776f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -875,22 +875,63 @@
     "\n",
     "mape_scorer = make_scorer(mean_absolute_percentage_error)\n",
     "\n",
-    "predictions.skb.cross_validate(\n",
+    "cv_results = predictions.skb.cross_validate(\n",
     "    cv=ts_cv_5,\n",
     "    scoring={\n",
     "        \"r2\": get_scorer(\"r2\"),\n",
     "        \"mape\": mape_scorer,\n",
     "    },\n",
     "    return_train_score=True,\n",
+    "    return_pipeline=True,\n",
     "    verbose=1,\n",
     "    n_jobs=-1,\n",
-    ").round(3)"
+    ")\n",
+    "cv_results.round(3)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b32f0f31",
+   "id": "25f30e6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "def collect_cv_predictions(pipelines, cv_splitter, predictions):\n",
+    "\n",
+    "    def splitter(X, y):\n",
+    "        \"\"\"Workaround to transform a scikit-learn splitter into a function understood\n",
+    "        by `skrub.train_test_split`.\"\"\"\n",
+    "        train_idx, test_idx = next(cv_splitter.split(X, y))\n",
+    "        return X[train_idx], X[test_idx], y[train_idx], y[test_idx]\n",
+    "\n",
+    "    return [\n",
+    "         pipeline.predict(\n",
+    "            predictions.skb.train_test_split(\n",
+    "                predictions.skb.get_data(), splitter=splitter\n",
+    "            )[\"test\"]\n",
+    "        )\n",
+    "        for pipeline in pipelines\n",
+    "    ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c2634ed",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "outputs": [],
+   "source": [
+    "cv_predictions = collect_cv_predictions(cv_results[\"pipeline\"], ts_cv_5, predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb14f7b7",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -912,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46bf1775",
+   "id": "482bbf5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -922,17 +963,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17e2204a",
+   "id": "4467a08c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "randomized_search.plot_results().update_layout(margin=dict(l=180))"
+    "randomized_search.plot_results().update_layout(margin=dict(l=150))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f7367e8",
+   "id": "1ee19f3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -953,7 +994,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "def77cf7",
+   "id": "ae9706ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -969,7 +1010,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85ca732c",
+   "id": "08b6d771",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -985,7 +1026,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9b20e1c",
+   "id": "e84302b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -999,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5b1c945e",
+   "id": "f0f81b9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1011,7 +1052,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "104eb656",
+   "id": "9f97094f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1027,7 +1068,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7592b155",
+   "id": "16ce93c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1101,7 +1142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d348df04",
+   "id": "32dbb94f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1113,7 +1154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22c3c242",
+   "id": "edfb3042",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1124,7 +1165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f8e436a",
+   "id": "66a278e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1160,7 +1201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f01ba5e",
+   "id": "ec07b9fa",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1172,7 +1213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f770c52d",
+   "id": "95a640c6",
    "metadata": {},
    "outputs": [],
    "source": []
