--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e199c717",
+   "id": "69baa454",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3907bb7",
+   "id": "6e08dec1",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be39eddf",
+   "id": "24a91010",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30cc65a1",
+   "id": "1c7934ff",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79df86c1",
+   "id": "8a180de2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "224ff61d",
+   "id": "57eced28",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d3b99b9",
+   "id": "6535a4d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72371ce8",
+   "id": "7047a3a2",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b00ade6",
+   "id": "0d137659",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52ecd575",
+   "id": "307a6a59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82433479",
+   "id": "46841026",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bd63387",
+   "id": "fb441f34",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30247ae6",
+   "id": "f38b058a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d83de311",
+   "id": "a370f2d6",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6471a3e0",
+   "id": "f1894ce9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6337dd82",
+   "id": "44156963",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be8a7d10",
+   "id": "cfac980f",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb50191d",
+   "id": "d4ec0b2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01a87723",
+   "id": "8b35f5c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "98576cce",
+   "id": "6fc38c3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "113af889",
+   "id": "b4389eec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89f0c779",
+   "id": "5053a0f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d56737b7",
+   "id": "cd5186ae",
    "metadata": {},
    "source": [
     "\n",
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0cef0ed",
+   "id": "2880961d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02781555",
+   "id": "1122b1b5",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af766eab",
+   "id": "a1a9cda2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eaf91b39",
+   "id": "9ca99d0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8476162",
+   "id": "5e094de9",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b20e74b",
+   "id": "7fa5e8a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a472a3c1",
+   "id": "530cfbef",
    "metadata": {},
    "source": [
     "\n",
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71f481b1",
+   "id": "a0d1a3e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ab64e99",
+   "id": "6bcf3f81",
    "metadata": {},
    "source": [
     "\n",
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1beaa49f",
+   "id": "978b7d07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83f98d5d",
+   "id": "9369b71c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cabdea3d",
+   "id": "77df860c",
    "metadata": {},
    "source": [
     "\n",
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89c0c4e1",
+   "id": "28595d5e",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f78f804",
+   "id": "67e51037",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e69b2f58",
+   "id": "15cdb2ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c8b95cc",
+   "id": "fb5e2dcd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "880a03c4",
+   "id": "1ba000fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fbc4748",
+   "id": "5765341b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a56341a",
+   "id": "5fc6101c",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2471d8d0",
+   "id": "f48c2f83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c826f7d",
+   "id": "451a50c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -875,22 +875,63 @@
     "\n",
     "mape_scorer = make_scorer(mean_absolute_percentage_error)\n",
     "\n",
-    "predictions.skb.cross_validate(\n",
+    "cv_results = predictions.skb.cross_validate(\n",
     "    cv=ts_cv_5,\n",
     "    scoring={\n",
     "        \"r2\": get_scorer(\"r2\"),\n",
     "        \"mape\": mape_scorer,\n",
     "    },\n",
     "    return_train_score=True,\n",
+    "    return_pipeline=True,\n",
     "    verbose=1,\n",
     "    n_jobs=-1,\n",
-    ").round(3)"
+    ")\n",
+    "cv_results.round(3)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1b98102",
+   "id": "4cefa792",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "def collect_cv_predictions(pipelines, cv_splitter, predictions):\n",
+    "\n",
+    "    def splitter(X, y):\n",
+    "        \"\"\"Workaround to transform a scikit-learn splitter into a function understood\n",
+    "        by `skrub.train_test_split`.\"\"\"\n",
+    "        train_idx, test_idx = next(cv_splitter.split(X, y))\n",
+    "        return X[train_idx], X[test_idx], y[train_idx], y[test_idx]\n",
+    "\n",
+    "    return [\n",
+    "         pipeline.predict(\n",
+    "            predictions.skb.train_test_split(\n",
+    "                predictions.skb.get_data(), splitter=splitter\n",
+    "            )[\"test\"]\n",
+    "        )\n",
+    "        for pipeline in pipelines\n",
+    "    ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6e3d3c9",
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
+   "outputs": [],
+   "source": [
+    "cv_predictions = collect_cv_predictions(cv_results[\"pipeline\"], ts_cv_5, predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76e4429f",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -912,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0a84a95",
+   "id": "66fc23ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -922,17 +963,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9da43a8",
+   "id": "41afbe22",
    "metadata": {},
    "outputs": [],
    "source": [
-    "randomized_search.plot_results().update_layout(margin=dict(l=180))"
+    "randomized_search.plot_results().update_layout(margin=dict(l=150))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a97bdb5e",
+   "id": "3bdd733e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -953,7 +994,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f4549a8",
+   "id": "d5059cb1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -969,7 +1010,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1d01d9c",
+   "id": "6e457bb3",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -985,7 +1026,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f1a3576",
+   "id": "8bcd970d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -999,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b1c03ca",
+   "id": "12b137f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1011,7 +1052,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df729f9c",
+   "id": "575e5972",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1027,7 +1068,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7693ddb4",
+   "id": "608c79c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1101,7 +1142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52d59b13",
+   "id": "53a1ae69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1113,7 +1154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "416cc735",
+   "id": "60e7004a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1124,7 +1165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58ffd943",
+   "id": "b423f892",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1160,7 +1201,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d3a30e2",
+   "id": "1bd83e89",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1172,7 +1213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9dc07b54",
+   "id": "6cd8fa4c",
    "metadata": {},
    "outputs": [],
    "source": []
