[ci skip] fix c01801414181df304cff9495497910171e22aad6

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1587237e",
+   "id": "5537fa6d",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c62b0f2",
+   "id": "20075679",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "653d9bf0",
+   "id": "2c02ee9c",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d538be2e",
+   "id": "ce0d6079",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9f7526d",
+   "id": "a9ae24b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f0e052bc",
+   "id": "e72ac595",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7ce3699",
+   "id": "55b8eb52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "daf889ac",
+   "id": "41ee4319",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51c14511",
+   "id": "b77a4330",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54895aa0",
+   "id": "4da72bd2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e25417e",
+   "id": "9983361a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c5a008f",
+   "id": "47f1b808",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db273a11",
+   "id": "5e20fcc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ef2a174",
+   "id": "b312161e",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cdefcb9",
+   "id": "47f27f9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35eaaf88",
+   "id": "d44e3817",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09a4bf01",
+   "id": "2263aa3a",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78027d43",
+   "id": "a8cb171c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d07936a",
+   "id": "e062fa02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee51985d",
+   "id": "18f326f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "398f68df",
+   "id": "7fc6f146",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c32b2ec8",
+   "id": "01045907",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e1fd719",
+   "id": "3657a357",
    "metadata": {},
    "source": [
     "\n",
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f26308bf",
+   "id": "4c378eb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c94bd4a",
+   "id": "92035684",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a7d2095",
+   "id": "3cd9accb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a75acf5",
+   "id": "2c300d00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "242b0c26",
+   "id": "6b94d482",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70dda4d8",
+   "id": "9250dc2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "335bb582",
+   "id": "c68ef927",
    "metadata": {},
    "source": [
     "\n",
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2317b792",
+   "id": "25679b4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ed699af",
+   "id": "6e161531",
    "metadata": {},
    "source": [
     "\n",
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b35ec7b",
+   "id": "867be9db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e53217a",
+   "id": "1f99a0ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fc08038",
+   "id": "5570160c",
    "metadata": {},
    "source": [
     "\n",
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87791cd3",
+   "id": "67f9d195",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49c01491",
+   "id": "8613b4b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a31e31b",
+   "id": "4031b630",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92589603",
+   "id": "c3024ea6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17fe5115",
+   "id": "7e898fa8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cbe6e20",
+   "id": "da535484",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c097ca4",
+   "id": "bad34383",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f93cf16e",
+   "id": "dee94b8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e1b7793",
+   "id": "5cb39526",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdbaba8c",
+   "id": "efe83cea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -900,6 +900,8 @@
     "\n",
     "def collect_cv_predictions(pipelines, cv_splitter, predictions, prediction_time):\n",
     "\n",
+    "    # We need to create a generator outside of the function such that we don't recreate\n",
+    "    # one inside the `splitter` function and always get the first split.\n",
     "    split_generator = cv_splitter.split(prediction_time.skb.eval())\n",
     "    def splitter(X, y):\n",
     "        \"\"\"Workaround to transform a scikit-learn splitter into a function understood\n",
@@ -929,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c505db8e",
+   "id": "1e09de29",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -943,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e9d775b",
+   "id": "5cb9a763",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -965,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba06af99",
+   "id": "c913b92c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -975,7 +977,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d9358a1",
+   "id": "3ba106f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -985,7 +987,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a99f1b45",
+   "id": "6827ed23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,7 +1008,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "502bb370",
+   "id": "0466689c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,7 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d1b22ed5",
+   "id": "194e472b",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1038,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81698bf3",
+   "id": "7b58aba8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1052,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c104d48d",
+   "id": "0d0bdae3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1064,7 +1066,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f957db9",
+   "id": "add7f8da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1080,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53e48114",
+   "id": "106be62e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1148,7 +1150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abbe3f08",
+   "id": "f0917dd3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1160,7 +1162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44bd7fd2",
+   "id": "53916f5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1171,7 +1173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5e401fa",
+   "id": "e75fb7cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1207,7 +1209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02ca47d8",
+   "id": "2ba7537c",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1219,7 +1221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed38db2f",
+   "id": "b41a55e4",
    "metadata": {},
    "outputs": [],
    "source": []
