--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7cf9f1e5",
+   "id": "ccbd743b",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78954b84",
+   "id": "b005e2eb",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b21fe50",
+   "id": "9862695d",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c9dd6f5",
+   "id": "a19a0060",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a65e3dae",
+   "id": "d25b621c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5922bf9",
+   "id": "301b388e",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8286a259",
+   "id": "5728f223",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a68d9f4",
+   "id": "e737c28a",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "817571e8",
+   "id": "e2f02c05",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8d92b74",
+   "id": "ed6953ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4fe6751",
+   "id": "cb82dca0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "898108b8",
+   "id": "49dddf26",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5261804",
+   "id": "eecc476f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c75d052",
+   "id": "a160b2b7",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47e69cd3",
+   "id": "ab211116",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99e27452",
+   "id": "2bb85d96",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43168d07",
+   "id": "b4d90ee6",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9fc1019",
+   "id": "2b98b8b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e13899a",
+   "id": "e96bee3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef568d14",
+   "id": "dfc6e8fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a9d3976",
+   "id": "641ec8a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd01dd0f",
+   "id": "08d30f9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da8dc67f",
+   "id": "e6f15891",
    "metadata": {},
    "source": [
     "\n",
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3be72e24",
+   "id": "db35504d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14a48f16",
+   "id": "87c6ec5a",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8016e8a4",
+   "id": "1fd3d70a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "968b2d1b",
+   "id": "fcac30f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3dc1cd6",
+   "id": "43c4aa05",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "836d3cfb",
+   "id": "0374fc24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed7e0f8c",
+   "id": "0ba7b3c9",
    "metadata": {},
    "source": [
     "\n",
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6a01f0e",
+   "id": "3cf05dcd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01902c8f",
+   "id": "4e4ab2a7",
    "metadata": {},
    "source": [
     "\n",
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73d3ad18",
+   "id": "eb2ce9ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ab1474f",
+   "id": "c9d087b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6732e952",
+   "id": "292878a9",
    "metadata": {},
    "source": [
     "\n",
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4f05d077",
+   "id": "f087a549",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65fd6b6a",
+   "id": "bae285c4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af7727c3",
+   "id": "d0e99ec9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb496ecc",
+   "id": "c6d8209f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ed9e41a",
+   "id": "218c769b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46ecb8a3",
+   "id": "9b4dcc44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d048cec",
+   "id": "4f548c5e",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95ce0faa",
+   "id": "b85eec0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "069a92f6",
+   "id": "02daca07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37cc8a32",
+   "id": "2376ff0b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -900,6 +900,8 @@
     "\n",
     "def collect_cv_predictions(pipelines, cv_splitter, predictions, prediction_time):\n",
     "\n",
+    "    # We need to create a generator outside of the function such that we don't recreate\n",
+    "    # one inside the `splitter` function and always get the first split.\n",
     "    split_generator = cv_splitter.split(prediction_time.skb.eval())\n",
     "    def splitter(X, y):\n",
     "        \"\"\"Workaround to transform a scikit-learn splitter into a function understood\n",
@@ -929,7 +931,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06360365",
+   "id": "79c81a67",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -943,7 +945,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "295e178d",
+   "id": "7264c1c4",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -965,7 +967,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ac0b854",
+   "id": "23c468b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -975,7 +977,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "995bf08b",
+   "id": "505ac237",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -985,7 +987,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b2221c3",
+   "id": "ca4e1e23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,7 +1008,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a06c56c4",
+   "id": "8a722dfa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,7 +1024,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "57265710",
+   "id": "adada3f3",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -1038,7 +1040,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf3299bf",
+   "id": "3c01b78c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1052,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7217eaad",
+   "id": "94f7f167",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1064,7 +1066,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a911e147",
+   "id": "c3472192",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1080,7 +1082,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e863251",
+   "id": "68cc1cbe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1148,7 +1150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4218dc12",
+   "id": "a3ba62b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1160,7 +1162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe880c49",
+   "id": "1be7f1be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1171,7 +1173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a46f7118",
+   "id": "f4e0062b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1207,7 +1209,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dc04129",
+   "id": "285ef701",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1219,7 +1221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8987662d",
+   "id": "e7e52beb",
    "metadata": {},
    "outputs": [],
    "source": []
